Initialize Stable
Removed all remaining rework code