@@ -1,5 +1,5 @@
-/* JNativeHook: Global keyboard and mouse hooking for Java.
- * Copyright (C) 2006-2018 Alexander Barker. All Rights Received.
+/* JNativeHook: Global keyboard and mouse listeners for Java.
+ * Copyright (C) 2006-2021 Alexander Barker.  All Rights Reserved.
  * https://github.com/kwhat/jnativehook/
  *
  * JNativeHook is free software: you can redistribute it and/or modify
@@ -9,56 +9,38 @@
  *
  * JNativeHook is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU Lesser General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 package com.github.kwhat.jnativehook;
 
-// Imports.
 import com.github.kwhat.jnativehook.dispatcher.DefaultDispatchService;
 import com.github.kwhat.jnativehook.keyboard.NativeKeyEvent;
 import com.github.kwhat.jnativehook.keyboard.NativeKeyListener;
-import com.github.kwhat.jnativehook.mouse.NativeMouseEvent;
-import com.github.kwhat.jnativehook.mouse.NativeMouseListener;
-import com.github.kwhat.jnativehook.mouse.NativeMouseMotionListener;
-import com.github.kwhat.jnativehook.mouse.NativeMouseWheelEvent;
-import com.github.kwhat.jnativehook.mouse.NativeMouseWheelListener;
+import com.github.kwhat.jnativehook.mouse.*;
+import com.spotifyxp.logging.ConsoleLoggingModules;
+
 import javax.swing.event.EventListenerList;
 import java.io.File;
 import java.util.Iterator;
 import java.util.concurrent.ExecutorService;
-import java.util.logging.Level;
-import java.util.logging.Logger;
 
 /**
- * GlobalScreen is used to represent the native screen area that Java does not
- * usually have access to. This class can be thought of as the source component
- * for native input events.
+ * GlobalScreen is used to represent the native screen area that Java does not usually have access
+ * to. This class can be thought of as the source component for native input events.
  * <p>
- * This class also handles the loading, unpacking and communication with the
- * native library. That includes registering and un-registering the native hook
- * with the underlying operating system and adding global keyboard and mouse
- * listeners.
+ * This class also handles the loading, unpacking and communication with the native library. That
+ * includes registering and un-registering the native hook with the underlying operating system and
+ * adding global keyboard and mouse listeners.
  *
  * @author Alexander Barker (<a href="mailto:alex@1stleg.com">alex@1stleg.com</a>)
  * @version 2.1
  * @since 1.0
  */
 public class GlobalScreen {
-    /**
-     * Logging service for the native library.
-     */
-    protected static Logger logger = Logger.getLogger(GlobalScreen.class.getPackage().getName());
-    static {
-        logger.setLevel(Level.WARNING);
-        logger.setUseParentHandlers(false);
-    }
-
-    protected GlobalScreen() { }
-
     /**
      * The service to control the hook.
      */
@@ -80,27 +62,27 @@ public class GlobalScreen {
         try {
             // Try to load the native library assuming the java.library.path was set correctly at launch.
             System.loadLibrary(libName);
-        }
-        catch (UnsatisfiedLinkError linkError) {
-            String libLoader = System.getProperty("jnativehook.lib.locator", "com.github.kwhat.jnativehook.DefaultLibraryLocator");
+        } catch (UnsatisfiedLinkError linkError) {
+            String libLoader = System.getProperty("jnativehook.lib.locator", DefaultLibraryLocator.class.getCanonicalName());
 
             try {
                 // Use the specified class to locator the native library.
-                NativeLibraryLocator locator = Class.forName(libLoader).asSubclass(NativeLibraryLocator.class).newInstance();
+                NativeLibraryLocator locator = Class.forName(libLoader).asSubclass(NativeLibraryLocator.class).getDeclaredConstructor().newInstance();
 
                 Iterator<File> libs = locator.getLibraries();
                 while (libs.hasNext()) {
                     File lib = libs.next();
                     if (lib.exists() && lib.isFile() && lib.canRead()) {
-                        System.load(lib.getPath());
+                        try {
+                            System.load(lib.getPath());
+                        }catch (NoClassDefFoundError e) {
+                            e.printStackTrace();
+                        }
                     }
                 }
-            }
-            catch (Exception e) {
+            } catch (Exception e) {
                 // There was a problem instantiating the library loader.
-                logger.severe(e.getMessage());
-
-                throw new UnsatisfiedLinkError(e.getMessage());
+                ConsoleLoggingModules.error(e.getMessage());
             }
         }
 
@@ -127,9 +109,9 @@ public class GlobalScreen {
 
         Integer pointerAccelerationMultiplier = GlobalScreen.getPointerAccelerationMultiplier();
         if (pointerAccelerationMultiplier != null) {
-            System.setProperty("jnativehook.pointer.acceleration.multiplier", pointerAccelerationMultiplier.toString());
+            System.setProperty("jnativehook.pointer.acceleration.multiplier",
+                pointerAccelerationMultiplier.toString());
         }
-
 
         Integer pointerAccelerationThreshold = GlobalScreen.getPointerAccelerationThreshold();
         if (pointerAccelerationThreshold != null) {
@@ -138,9 +120,14 @@ public class GlobalScreen {
     }
 
     /**
-     * Adds the specified native key listener to receive key events from the
-     * native system.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Disable direct object construction.
+     */
+    protected GlobalScreen() {
+    }
+
+    /**
+     * Adds the specified native key listener to receive key events from the native system. If
+     * listener is null, no exception is thrown and no action is performed.
      *
      * @param listener a native key listener object
      */
@@ -151,10 +138,10 @@ public class GlobalScreen {
     }
 
     /**
-     * Removes the specified native key listener so that it no longer receives
-     * key events from the native system. This method performs no function if
-     * the listener specified by the argument was not previously added.I
-     * If listener is null, no exception is thrown and no action is performed.
+     * Removes the specified native key listener so that it no longer receives key events from the
+     * native system. This method performs no function if the listener specified by the argument was
+     * not previously added.  If listener is null, no exception is thrown and no action is
+     * performed.
      *
      * @param listener a native key listener object
      */
@@ -165,9 +152,8 @@ public class GlobalScreen {
     }
 
     /**
-     * Adds the specified native mouse listener to receive mouse events from the
-     * native system.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Adds the specified native mouse listener to receive mouse events from the native system. If
+     * listener is null, no exception is thrown and no action is performed.
      *
      * @param listener a native mouse listener object
      */
@@ -178,10 +164,10 @@ public class GlobalScreen {
     }
 
     /**
-     * Removes the specified native mouse listener so that it no longer receives
-     * mouse events from the native system. This method performs no function if
-     * the listener specified by the argument was not previously added.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Removes the specified native mouse listener so that it no longer receives mouse events from
+     * the native system. This method performs no function if the listener specified by the argument
+     * was not previously added.  If listener is null, no exception is thrown and no action is
+     * performed.
      *
      * @param listener a native mouse listener object
      */
@@ -192,9 +178,8 @@ public class GlobalScreen {
     }
 
     /**
-     * Adds the specified native mouse motion listener to receive mouse motion
-     * events from the native system.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Adds the specified native mouse motion listener to receive mouse motion events from the
+     * native system. If listener is null, no exception is thrown and no action is performed.
      *
      * @param listener a native mouse motion listener object
      */
@@ -205,11 +190,10 @@ public class GlobalScreen {
     }
 
     /**
-     * Removes the specified native mouse motion listener so that it no longer
-     * receives mouse motion events from the native system. This method performs
-     * no function if the listener specified by the argument was not previously
-     * added.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Removes the specified native mouse motion listener so that it no longer receives mouse motion
+     * events from the native system. This method performs no function if the listener specified by
+     * the argument was not previously added.  If listener is null, no exception is thrown and no
+     * action is performed.
      *
      * @param listener a native mouse motion listener object
      */
@@ -220,9 +204,8 @@ public class GlobalScreen {
     }
 
     /**
-     * Adds the specified native mouse wheel listener to receive mouse wheel
-     * events from the native system.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Adds the specified native mouse wheel listener to receive mouse wheel events from the native
+     * system. If listener is null, no exception is thrown and no action is performed.
      *
      * @param listener a native mouse wheel listener object
      * @since 1.1
@@ -234,11 +217,10 @@ public class GlobalScreen {
     }
 
     /**
-     * Removes the specified native mouse wheel listener so that it no longer
-     * receives mouse wheel events from the native system. This method performs
-     * no function if the listener specified by the argument was not previously
-     * added.
-     * If listener is null, no exception is thrown and no action is performed.
+     * Removes the specified native mouse wheel listener so that it no longer receives mouse wheel
+     * events from the native system. This method performs no function if the listener specified by
+     * the argument was not previously added.  If listener is null, no exception is thrown and no
+     * action is performed.
      *
      * @param listener a native mouse wheel listener object
      * @since 1.1
@@ -329,8 +311,7 @@ public class GlobalScreen {
             try {
                 // NOTE enable() will call notifyAll() on this object after passing exception throwing code.
                 this.enable();
-            }
-            catch (NativeHookException e) {
+            } catch (NativeHookException e) {
                 this.exception = e;
             }
 
@@ -350,33 +331,33 @@ public class GlobalScreen {
         }
 
         /**
-         * Native implementation to start the input hook. This method blocks and should only be called by this
-         * specialized thread implementation. This method will notifyAll() after passing any exception exception
-         * throwing code.
+         * Native implementation to start the input hook.  This method blocks and should only be
+         * called by this specialized thread implementation.  This method will notifyAll() after
+         * passing any exception exception throwing code.
          *
-         * @throws NativeHookException problem registering the native hook with the underlying operating system.
+         * @throws NativeHookException problem registering the native hook with the underlying
+         *                             operating system.
          */
         protected native void enable() throws NativeHookException;
 
         /**
-         * Native implementation to stop the input hook. There is no other way to stop the hook.
+         * Native implementation to stop the input hook.  There is no other way to stop the hook.
          *
-         * @throws NativeHookException problem un-registering the native hook with the underlying operating system.
+         * @throws NativeHookException problem un-registering the native hook with the underlying
+         *                             operating system.
          */
         public native void disable() throws NativeHookException;
 
         /**
-         * Dispatches an event to the appropriate processor. This method is
-         * generally called by the native library but may be used to synthesize
-         * native events from Java without replaying them on the native system. If
-         * you would like to send events to other applications, please use
-         * {@link #postNativeEvent},
+         * Dispatches an event to the appropriate processor.  This method is generally called by the
+         * native library but may be used to synthesize native events from Java without replaying
+         * them on the native system.  If you would like to send events to other applications,
+         * please use {@link #postNativeEvent},
          * <p>
          *
          * <b>Note:</b> This method executes on the native system's event queue.
-         * It is imperative that all processing be off-loaded to other threads.
-         * Failure to do so might result in the delay of user input and the automatic
-         * removal of the native hook.
+         * It is imperative that all processing be off-loaded to other threads. Failure to do so
+         * might result in the delay of user input and the automatic removal of the native hook.
          *
          * @param event the <code>NativeInputEvent</code> sent to the registered event listeners.
          */
@@ -392,31 +373,26 @@ public class GlobalScreen {
      * Enable the native hook. If the hooks is currently enabled, this function has no effect.
      * <p>
      * <b>Note:</b> This method will throw a <code>NativeHookException</code>
-     * if specific operating system feature is unavailable or disabled.
-     * For example: Access for assistive devices is unchecked in the Universal
-     * Access section of the System Preferences on Apple's OS X platform or
+     * if specific operating system feature is unavailable or disabled. For example: Access for
+     * assistive devices is unchecked in the Universal Access section of the System Preferences on
+     * Apple's OS X platform or
      * <code>Load "record"</code> is missing for the xorg.conf file on
      * Unix/Linux/Solaris platforms.
      *
-     * @throws NativeHookException problem registering the native hook with the underlying operating system.
+     * @throws NativeHookException problem registering the native hook with the underlying operating
+     *                             system.
      * @since 1.1
      */
     public static void registerNativeHook() throws NativeHookException {
         if (eventExecutor != null) {
-            if (! eventExecutor.isShutdown()) {
+            if (!eventExecutor.isShutdown()) {
                 eventExecutor.shutdown();
             }
 
-            while (! eventExecutor.isTerminated()) {
-                try {
-                    Thread.sleep(250);
-                }
-                catch (InterruptedException e) {
-                    logger.warning(e.getMessage());
-                    break;
-                }
+            while (!eventExecutor.isTerminated()) {
+                Thread.yield();
             }
-
+        } else {
             eventExecutor = new DefaultDispatchService();
         }
 
@@ -428,8 +404,7 @@ public class GlobalScreen {
 
                 try {
                     hookThread.wait();
-                }
-                catch (InterruptedException e) {
+                } catch (InterruptedException e) {
                     throw new NativeHookException(e);
                 }
 
@@ -442,8 +417,8 @@ public class GlobalScreen {
     }
 
     /**
-     * Disable the native hook if it is currently registered. If the native
-     * hook it is not registered the function has no effect.
+     * Disable the native hook if it is currently registered. If the native hook it is not
+     * registered the function has no effect.
      *
      * @throws NativeHookException hook interrupted by Java.
      * @since 1.1
@@ -455,8 +430,7 @@ public class GlobalScreen {
                 try {
                     hookThread.disable();
                     hookThread.join();
-                }
-                catch (Exception e) {
+                } catch (Exception e) {
                     throw new NativeHookException(e.getCause());
                 }
             }
@@ -477,43 +451,42 @@ public class GlobalScreen {
 
 
     /**
-     * Add a <code>NativeInputEvent</code> to the operating system's event queue.
-     * Each type of <code>NativeInputEvent</code> is processed according to its
-     * event id.
+     * Add a <code>NativeInputEvent</code> to the operating system's event queue. Each type of
+     * <code>NativeInputEvent</code> is processed according to its event id.
      * <p>
      *
      * For both <code>NATIVE_KEY_PRESSED</code> and
      * <code>NATIVE_KEY_RELEASED</code> events, the virtual keycode and modifier
-     * mask are used in the creation of the native event. Please note that some
-     * platforms may generate <code>NATIVE_KEY_PRESSED</code> and
+     * mask are used in the creation of the native event.  Please note that some platforms may
+     * generate <code>NATIVE_KEY_PRESSED</code> and
      * <code>NATIVE_KEY_RELEASED</code> events for each required modifier.
      * <code>NATIVE_KEY_TYPED</code> events will first translate the associated
      * keyChar to its respective virtual code and then produce a
      * <code>NATIVE_KEY_PRESSED</code> followed by a <code>NATIVE_KEY_RELEASED</code>
-     * event using that virtual code. If the JNativeHook is unable to translate
-     * the keyChar to its respective virtual code, the event is ignored.
+     * event using that virtual code.  If the JNativeHook is unable to translate the keyChar to its
+     * respective virtual code, the event is ignored.
      * <p>
      *
      * <code>NativeMouseEvents</code> are processed in much the same way as the
-     * <code>NativeKeyEvents</code>. Both <code>NATIVE_MOUSE_PRESSED</code> and
+     * <code>NativeKeyEvents</code>.  Both <code>NATIVE_MOUSE_PRESSED</code> and
      * <code>NATIVE_MOUSE_RELEASED</code> produce events corresponding to the
-     * event's button code. Keyboard modifiers may be used in conjunction with
-     * button press and release events, however, they might produce events for each
-     * modifier. <code>NATIVE_MOUSE_CLICKED</code> events produce a
+     * event's button code.  Keyboard modifiers may be used in conjunction with button press and
+     * release events, however, they might produce events for each modifier.
+     * <code>NATIVE_MOUSE_CLICKED</code> events produce a
      * <code>NATIVE_MOUSE_PRESSED</code> event followed by a
      * <code>NATIVE_MOUSE_RELEASED</code> for the assigned event button.
      * <p>
      *
      * <code>NATIVE_MOUSE_DRAGGED</code> and <code>NATIVE_MOUSE_MOVED</code> events
-     * are handled identically. In order to produce a <code>NATIVE_MOUSE_DRAGGED</code>
-     * event, you must specify a button modifier mask that contains at least one
-     * button modifier and assign it to the event. Failure to do so will produce a
+     * are handled identically.  In order to produce a <code>NATIVE_MOUSE_DRAGGED</code> event, you
+     * must specify a button modifier mask that contains at least one button modifier and assign it
+     * to the event.  Failure to do so will produce a
      * <code>NATIVE_MOUSE_MOVED</code> event even if the event id was set to
      * <code>NATIVE_MOUSE_DRAGGED</code>.
      * <p>
      *
      * <code>NATIVE_MOUSE_WHEEL</code> events are identical to
-     * <code>NATIVE_MOUSE_PRESSED</code> events. Wheel events will only produce
+     * <code>NATIVE_MOUSE_PRESSED</code> events.  Wheel events will only produce
      * pressed events and will never produce <code>NATIVE_MOUSE_RELEASED</code>,
      * <code>NATIVE_MOUSE_DRAGGED</code> or <code>NATIVE_MOUSE_MOVED</code>
      *
@@ -529,12 +502,12 @@ public class GlobalScreen {
         /**
          * The event to dispatch.
          */
-        private NativeInputEvent event;
+        private final NativeInputEvent event;
 
         /**
          * Single argument constructor for dispatch task.
          *
-         * @param event	the <code>NativeInputEvent</code> to dispatch.
+         * @param event the <code>NativeInputEvent</code> to dispatch.
          */
         public EventDispatchTask(NativeInputEvent event) {
             this.event = event;
@@ -543,11 +516,9 @@ public class GlobalScreen {
         public void run() {
             if (event instanceof NativeKeyEvent) {
                 processKeyEvent((NativeKeyEvent) event);
-            }
-            else if (event instanceof NativeMouseWheelEvent) {
+            } else if (event instanceof NativeMouseWheelEvent) {
                 processMouseWheelEvent((NativeMouseWheelEvent) event);
-            }
-            else if (event instanceof NativeMouseEvent) {
+            } else if (event instanceof NativeMouseEvent) {
                 switch (event.getID()) {
                     case NativeMouseEvent.NATIVE_MOUSE_PRESSED:
                     case NativeMouseEvent.NATIVE_MOUSE_CLICKED:
@@ -560,9 +531,6 @@ public class GlobalScreen {
                         processMouseEvent((NativeMouseEvent) event);
                         break;
                 }
-            }
-            else if (event instanceof NativeMouseWheelEvent) {
-                processMouseWheelEvent((NativeMouseWheelEvent) event);
             }
         }
 
@@ -579,18 +547,18 @@ public class GlobalScreen {
         private void processKeyEvent(NativeKeyEvent nativeEvent) {
             NativeKeyListener[] listeners = eventListeners.getListeners(NativeKeyListener.class);
 
-            for (int i = 0; i < listeners.length; i++) {
+            for (NativeKeyListener listener : listeners) {
                 switch (nativeEvent.getID()) {
                     case NativeKeyEvent.NATIVE_KEY_PRESSED:
-                        listeners[i].nativeKeyPressed(nativeEvent);
+                        listener.nativeKeyPressed(nativeEvent);
                         break;
 
                     case NativeKeyEvent.NATIVE_KEY_TYPED:
-                        listeners[i].nativeKeyTyped(nativeEvent);
+                        listener.nativeKeyTyped(nativeEvent);
                         break;
 
                     case NativeKeyEvent.NATIVE_KEY_RELEASED:
-                        listeners[i].nativeKeyReleased(nativeEvent);
+                        listener.nativeKeyReleased(nativeEvent);
                         break;
                 }
             }
@@ -606,20 +574,21 @@ public class GlobalScreen {
          * @see #addNativeMouseListener(NativeMouseListener)
          */
         private void processButtonEvent(NativeMouseEvent nativeEvent) {
-            NativeMouseListener[] listeners = eventListeners.getListeners(NativeMouseListener.class);
+            NativeMouseListener[] listeners = eventListeners
+                .getListeners(NativeMouseListener.class);
 
-            for (int i = 0; i < listeners.length; i++) {
+            for (NativeMouseListener listener : listeners) {
                 switch (nativeEvent.getID()) {
                     case NativeMouseEvent.NATIVE_MOUSE_CLICKED:
-                        listeners[i].nativeMouseClicked(nativeEvent);
+                        listener.nativeMouseClicked(nativeEvent);
                         break;
 
                     case NativeMouseEvent.NATIVE_MOUSE_PRESSED:
-                        listeners[i].nativeMousePressed(nativeEvent);
+                        listener.nativeMousePressed(nativeEvent);
                         break;
 
                     case NativeMouseEvent.NATIVE_MOUSE_RELEASED:
-                        listeners[i].nativeMouseReleased(nativeEvent);
+                        listener.nativeMouseReleased(nativeEvent);
                         break;
                 }
             }
@@ -635,16 +604,17 @@ public class GlobalScreen {
          * @see #addNativeMouseMotionListener(NativeMouseMotionListener)
          */
         private void processMouseEvent(NativeMouseEvent nativeEvent) {
-            NativeMouseMotionListener[] listeners = eventListeners.getListeners(NativeMouseMotionListener.class);
+            NativeMouseMotionListener[] listeners = eventListeners
+                .getListeners(NativeMouseMotionListener.class);
 
-            for (int i = 0; i < listeners.length; i++) {
+            for (NativeMouseMotionListener listener : listeners) {
                 switch (nativeEvent.getID()) {
                     case NativeMouseEvent.NATIVE_MOUSE_MOVED:
-                        listeners[i].nativeMouseMoved(nativeEvent);
+                        listener.nativeMouseMoved(nativeEvent);
                         break;
 
                     case NativeMouseEvent.NATIVE_MOUSE_DRAGGED:
-                        listeners[i].nativeMouseDragged(nativeEvent);
+                        listener.nativeMouseDragged(nativeEvent);
                         break;
                 }
             }
@@ -663,21 +633,20 @@ public class GlobalScreen {
         private void processMouseWheelEvent(NativeMouseWheelEvent nativeEvent) {
             NativeMouseWheelListener[] listeners = eventListeners.getListeners(NativeMouseWheelListener.class);
 
-            for (int i = 0; i < listeners.length; i++) {
-                listeners[i].nativeMouseWheelMoved(nativeEvent);
+            for (NativeMouseWheelListener listener : listeners) {
+                listener.nativeMouseWheelMoved(nativeEvent);
             }
         }
     }
 
     /**
-     * Set a different executor service for native event delivery. By default,
-     * JNativeHook utilizes a single thread executor to dispatch events from
-     * the native event queue. You may choose to use an alternative approach
-     * for event delivery by implementing an <code>ExecutorService</code>.
+     * Set a different executor service for native event delivery.  By default, JNativeHook utilizes
+     * a single thread executor to dispatch events from the native event queue.  You may choose to
+     * use an alternative approach for event delivery by implementing an
+     * <code>ExecutorService</code>.
      * <p>
      * <b>Note:</b> Using null as an <code>ExecutorService</code> will cause all
-     * delivered events to be discarded until a valid <code>ExecutorService</code>
-     * is set.
+     * delivered events to be discarded until a valid <code>ExecutorService</code> is set.
      *
      * @param dispatcher The <code>ExecutorService</code> used to dispatch native events.
      * @see java.util.concurrent.ExecutorService
